--- a/DiplomaWorkStudyPlatform/src/main/resources/static/styles.css
+++ b/DiplomaWorkStudyPlatform/src/main/resources/static/styles.css
@@ -29,6 +29,8 @@ body {
 .content {
     width: 60%;
     background-color: #eee;
+    overflow-y: auto;
+
 }
 
 .content-buttons {
@@ -37,6 +39,20 @@ body {
     align-items: flex-start;
     padding: 20px;
 }
+
+.content-buttons a {
+    text-decoration: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+    background-color: #007bff;
+    color: white;
+    box-shadow: #585858 4px 4px 0 0, azure 4px 4px 0 1px;
+}
+
 
 .create-course-btn,
 .create-test-btn {
@@ -150,6 +166,33 @@ body {
     padding: 15px 20px;
 }
 
+.sidebar-buttons a {
+    text-decoration: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+    background-color: #007bff;
+    color: white;
+    box-shadow: #585858 4px 4px 0 0, azure 4px 4px 0 1px;
+}
+
+.sidebar-buttons a:last-child {
+    margin-bottom: 40%;
+}
+
+.sidebar-buttons a:first-child {
+
+
+    margin-top: 40%;
+}
+
+.sidebar-buttons a:hover {
+    background-color: #0056b3;
+}
+
 .sidebar-buttons button {
     padding: 10px 20px;
     font-size: 16px;
@@ -245,12 +288,6 @@ th {
 
 .view-button:hover, .edit-button:hover, .delete-button:hover {
     cursor: pointer;
-}
-
-
-.content-block{
-    display: flex;
-    height: calc(100vh - 60px);
 }
 
 .content-block {
@@ -370,3 +407,91 @@ th {
     margin-top: 20px;
 }
 
+.add-btn {
+    background-color: #4CAF50;
+    color: black;
+    padding: 8px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    width: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
+.add-btn:hover {
+    background-color: #45a049;
+}
+
+.edit-course-form {
+    max-height: 100px;
+    overflow-y: auto;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+
+.form-group .form-control {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.save-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.save-btn:hover {
+    background-color: #45a049;
+}
+
+#materialsContainer {
+    max-height: 100px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-top: 10px;
+}
+.tasks-table-container {
+    max-height: 100px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-top: 10px;
+}
+.form-input {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+#saveMaterialsBtn {
+    display: none;
+    margin-top: 10px;
+}
