--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/create_course_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/create_course_page.html
@@ -6,16 +6,15 @@
     <title>Dashboard</title>
 
     <link rel="stylesheet" href="/styles.css">
-    <script src="/course_scripts.js"></script>
 </head>
 <body>
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <button id="coursesBtn">My courses</button>
-            <button id="testsBtn">My tests</button>
-            <button id="studentsBtn">My students</button>
-            <button id="settingsBtn">Settings</button>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">My courses</a>
+            <a th:href="@{/teacher_tests}" class="btn btn-primary">My tests</a>
+            <a th:href="@{/teacher_students}" class="btn btn-primary">My students</a>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">Settings</a>
         </div>
     </div>
     <div class="content" id="content">
@@ -23,9 +22,11 @@
         <form id="createCourseForm" th:action="@{/courses/create}" method="post" th:object="${course}">
             <label for="title">Course Name:</label><br>
             <input type="text" id="title" name="title" th:value="${param.title}" required><br>
+            <div th:if="${#fields.hasErrors('title')}" th:errors="*{title}" style="color: red" class="error-message"></div>
 
             <label for="points">Points:</label><br>
             <input type="number" id="points" name="points" th:value="${param.points}" required><br>
+            <div th:if="${#fields.hasErrors('points')}" th:errors="*{points}" style="color: red" class="error-message"></div>
 
             <button type="submit">Create Course</button>
         </form>
@@ -37,8 +38,7 @@
         <div class="user-name">
             <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
         </div>
-        <button class="logout-btn" id="logoutBtn">Logout</button>
-        <div class="logout-message" style="display: none;">Logout successful!</div>
+        <a th:href="@{/login}" class="logout-btn">Logout</a>
     </div>
 </div>
 </body>
