--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_home_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_home_page.html
@@ -6,8 +6,7 @@
     <title>Dashboard</title>
 
     <link rel="stylesheet" href="/styles.css">
-    <script src="/course_scripts.js"></script>
-    <script src="/course_sort.js"></script>
+    <script src="/search_sort.js"></script>
     <script src="/course_delete.js"></script>
 </head>
 <body>
@@ -15,10 +14,10 @@
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <button id="coursesBtn">My courses</button>
-            <button id="testsBtn">My tests</button>
-            <button id="studentsBtn">My students</button>
-            <button id="settingsBtn">Settings</button>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">My courses</a>
+            <a th:href="@{/teacher_tests}" class="btn btn-primary">My tests</a>
+            <a th:href="@{/teacher_students}" class="btn btn-primary">My students</a>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">Settings</a>
         </div>
     </div>
     <div class="content" id="content">
@@ -44,16 +43,20 @@
                     <td th:text="${course.points}"></td>
                     <td th:text="${course.courseKey}"></td>
                     <td class="button-container">
-                        <button class="view-button" id="viewCourseBtn">View</button>
-                        <button class="edit-button" id="editCourseBtn">Edit</button>
-                        <button class="delete-button" th:onclick="'deleteCourse(\'' + ${course.id} + '\')'" id="deleteCourseBtn">Delete</button>
+                        <a th:href="@{'/teacher_view_course/' + ${course.id}}">
+                            <button class="view-button">View</button>
+                        </a>
+                        <a th:href="@{'/teacher_edit_course/' + ${course.id}}">
+                            <button class="edit-button">Edit</button>
+                        </a>
+                        <button class="delete-button" th:onclick="'deleteCourse(\'' + ${course.id} + '\')'" >Delete</button>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
         <div class="content-buttons">
-            <button id="createCourseBtn" class="create-course-btn">Create course</button>
+            <a th:href="@{/teacher_create_course}" class="btn btn-primary">Create course</a>
         </div>
 
     </div>
@@ -61,9 +64,9 @@
         <div class="user-name">
             <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
         </div>
-        <button class="logout-btn" id="logoutBtn">Logout</button>
-        <div class="logout-message" style="display: none;">Logout successful!</div>
+        <a th:href="@{/login}" class="logout-btn">Logout</a>
     </div>
+
 </div>
 
 </body>
