--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/create_test_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/create_test_page.html
@@ -7,7 +7,6 @@
 
 
     <link rel="stylesheet" href="/styles.css">
-    <script src="/test_scripts.js"></script>
     <script src="/create_test.js"></script>
 
 </head>
@@ -52,6 +51,7 @@
                 <label for="courseId" class="form-label">Select Course:</label>
                 <select id="courseId" name="courseId" class="form-input" required>
                     <option value="">Select Course</option>
+                    <option value="null">No course</option>
                     <option th:each="course : ${courses}" th:value="${course.id}" th:text="${course.title}"></option>
                 </select>
             </div>
